Fix correlation engine: 8 chained bugs preventing any correlations
- Set NEWS_API_KEY default in docker-compose so news flows out of the box
- Increase poll interval to 15min to stay under NewsAPI free tier limit
- Lower min-price-delta 0.03->0.01, min-confidence 0.5->0.3, widen
  before/after windows to 120min for hourly backfill data
- Min keyword length 3->4, expanded stopwords to reduce false matches
- Require 2+ keyword matches (or 1 long match 6+ chars)
- Integrate PriceBackfillService into correlation evaluation so
  historical price data exists around news publication time
- Use closest tick (not average) for before/after prices
- Use ASC ordering for after-ticks so time-tightness finds earliest move
- Rebalance confidence weights (0.4/0.35/0.25), gentle sparse penalty 0.8
- Fall back to market stored price when no ticks available
- Rotate news categories (general/business/technology/science)
- Skip [Removed] articles, skip articles with no keywords
- Smarter backfill window check so correlation engine can request 7d data