@@ -33,6 +33,7 @@ public class CorrelationEngine {
     private final PriceTickRepository priceTickRepository;
     private final NewsEventRepository newsEventRepository;
     private final CorrelationRepository correlationRepository;
+    private final PriceBackfillService priceBackfillService;
     private final PolymarketConfig config;
     private final ApplicationEventPublisher eventPublisher;
 
@@ -41,28 +42,30 @@ public class CorrelationEngine {
         NewsEvent newsEvent = newsEventRepository.findById(event.getNewsEventId()).orElse(null);
         if (newsEvent == null) return;
 
+        log.info("Processing news for correlations: '{}'", newsEvent.getHeadline());
         checkCorrelations(newsEvent);
     }
 
-    /**
-     * Retroactive correlation check: re-check uncorrelated news from the last 60 minutes.
-     */
     @Scheduled(fixedDelay = 900000) // 15 minutes
-    public void retroactiveCheck() {
-        Instant cutoff = Instant.now().minus(Duration.ofMinutes(60));
-        List<NewsEvent> uncorrelated = newsEventRepository
+    public void retroactiveCorrelationCheck() {
+        Instant cutoff = Instant.now().minus(Duration.ofHours(4));
+        List<NewsEvent> recentNews = newsEventRepository
                 .findByPublishedAtBetweenOrderByPublishedAtDesc(cutoff, Instant.now());
 
         int checked = 0;
-        for (NewsEvent newsEvent : uncorrelated) {
-            // Skip if already has correlations
-            if (newsEvent.getKeywords() == null || newsEvent.getKeywords().isEmpty()) continue;
+        int skipped = 0;
+        for (NewsEvent newsEvent : recentNews) {
+            if (newsEvent.getKeywords() == null || newsEvent.getKeywords().isEmpty()) {
+                skipped++;
+                continue;
+            }
             checkCorrelations(newsEvent);
             checked++;
         }
 
-        if (checked > 0) {
-            log.debug("Retroactive correlation check processed {} news events", checked);
+        if (checked > 0 || skipped > 0) {
+            log.info("Retroactive correlation check: processed {} news events, skipped {} (no keywords)",
+                    checked, skipped);
         }
     }
 
@@ -70,11 +73,11 @@ public class CorrelationEngine {
         List<String> keywords = newsEvent.getKeywords();
         if (keywords == null || keywords.isEmpty()) return;
 
-        // Find candidate markets by keyword matching in Java (simpler than native query)
         List<Market> activeMarkets = marketRepository.findByActiveTrue();
         PolymarketConfig.Correlation corrConfig = config.getCorrelation();
 
         int candidates = 0;
+        int evaluated = 0;
         for (Market market : activeMarkets) {
             if (candidates >= corrConfig.getMaxCandidateMarkets()) break;
 
@@ -84,14 +87,26 @@ public class CorrelationEngine {
                     .count();
 
             if (matchingKeywords == 0) continue;
+            if (matchingKeywords == 1) {
+                boolean hasSingleLongMatch = keywords.stream()
+                        .filter(kw -> kw.length() >= 6)
+                        .anyMatch(kw -> questionLower.contains(kw.toLowerCase()));
+                if (!hasSingleLongMatch) continue;
+            }
+
             candidates++;
 
-            // Skip if already correlated
             if (correlationRepository.existsByMarketIdAndNewsEventId(market.getId(), newsEvent.getId())) {
                 continue;
             }
 
             evaluateCorrelation(market, newsEvent, keywords, matchingKeywords);
+            evaluated++;
+        }
+
+        if (candidates > 0) {
+            log.debug("News '{}': {} candidate markets, {} evaluated (keywords: {})",
+                    truncate(newsEvent.getHeadline(), 60), candidates, evaluated, keywords);
         }
     }
 
@@ -100,69 +115,105 @@ public class CorrelationEngine {
         PolymarketConfig.Correlation corrConfig = config.getCorrelation();
         Instant newsTime = newsEvent.getPublishedAt();
 
-        // Before window
+        try {
+            Instant backfillSince = newsTime.minus(Duration.ofDays(7));
+            priceBackfillService.backfillIfNeeded(market, backfillSince);
+        } catch (Exception e) {
+            log.debug("Backfill failed for market {}, continuing with available data: {}",
+                    market.getId(), e.getMessage());
+        }
+
+        // Find price BEFORE the news
         Instant beforeStart = newsTime.minus(Duration.ofMinutes(corrConfig.getBeforeWindowMinutes()));
         List<PriceTick> beforeTicks = priceTickRepository
                 .findByMarketIdAndTimestampBetweenOrderByTimestampDesc(
                         market.getId(), beforeStart, newsTime);
 
-        if (beforeTicks.size() < 1) return; // No baseline data
+        BigDecimal priceBefore;
+        if (!beforeTicks.isEmpty()) {
+            priceBefore = beforeTicks.get(0).getPrice();
+        } else if (market.getOutcomeYesPrice() != null) {
+            priceBefore = market.getOutcomeYesPrice();
+            log.debug("No before-ticks for market {} around news time {}, using stored price {}",
+                    market.getId(), newsTime, priceBefore);
+        } else {
+            log.debug("No price data at all for market {} — skipping", market.getId());
+            return;
+        }
 
-        BigDecimal priceBefore = averagePrice(beforeTicks);
-
-        // After window
+        // Find price AFTER the news
+        Instant afterStart = newsTime.plus(Duration.ofMinutes(5));
         Instant afterEnd = newsTime.plus(Duration.ofMinutes(corrConfig.getAfterWindowMinutes()));
         Instant now = Instant.now();
+
+        if (now.isBefore(newsTime.plus(Duration.ofMinutes(15)))) {
+            return;
+        }
         if (afterEnd.isAfter(now)) {
-            // Not enough time has passed yet — will be caught by retroactive check
-            if (Duration.between(newsTime, now).toMinutes() < 5) {
-                return;
-            }
             afterEnd = now;
         }
 
+        // ASC order for correct time-tightness calculation
         List<PriceTick> afterTicks = priceTickRepository
-                .findByMarketIdAndTimestampBetweenOrderByTimestampDesc(
-                        market.getId(), newsTime, afterEnd);
+                .findByMarketIdAndTimestampBetweenOrderByTimestampAsc(
+                        market.getId(), afterStart, afterEnd);
 
-        if (afterTicks.size() < 1) return; // No post-news data
+        BigDecimal priceAfter;
+        if (!afterTicks.isEmpty()) {
+            priceAfter = afterTicks.get(afterTicks.size() - 1).getPrice();
+        } else if (market.getOutcomeYesPrice() != null
+                && Duration.between(newsTime, now).toMinutes() > 30) {
+            priceAfter = market.getOutcomeYesPrice();
+            log.debug("No after-ticks for market {} after news time {}, using current price {}",
+                    market.getId(), newsTime, priceAfter);
+        } else {
+            return;
+        }
 
-        BigDecimal priceAfter = averagePrice(afterTicks);
         BigDecimal priceDelta = priceAfter.subtract(priceBefore);
 
-        if (priceDelta.abs().doubleValue() < corrConfig.getMinPriceDelta()) return;
+        if (priceDelta.abs().doubleValue() < corrConfig.getMinPriceDelta()) {
+            return;
+        }
 
-        // Compute confidence
+        // Compute confidence score
         double magnitudeScore = Math.min(priceDelta.abs().doubleValue() / 0.10, 1.0);
         double keywordOverlap = (double) matchingKeywords / keywords.size();
 
-        // Time tightness: how quickly the first significant move happened
-        double timeTightness = 0.5; // default
-        if (!afterTicks.isEmpty()) {
-            // Find first tick that shows significant deviation from before price
-            for (PriceTick tick : afterTicks) {
-                double tickDelta = tick.getPrice().subtract(priceBefore).abs().doubleValue();
-                if (tickDelta > corrConfig.getMinPriceDelta() / 2) {
-                    long minutesToMove = Duration.between(newsTime, tick.getTimestamp()).toMinutes();
-                    timeTightness = Math.max(0, 1.0 - ((double) minutesToMove / 30.0));
-                    break;
-                }
+        // Time tightness: find EARLIEST significant move (ASC order)
+        double timeTightness = 0.3;
+        for (PriceTick tick : afterTicks) {
+            double tickDelta = tick.getPrice().subtract(priceBefore).abs().doubleValue();
+            if (tickDelta > corrConfig.getMinPriceDelta() / 2) {
+                long minutesToMove = Duration.between(newsTime, tick.getTimestamp()).toMinutes();
+                timeTightness = Math.max(0, 1.0 - ((double) minutesToMove / 60.0));
+                break;
             }
         }
 
-        double confidence = (magnitudeScore * 0.5) + (keywordOverlap * 0.3) + (timeTightness * 0.2);
+        double confidence = (magnitudeScore * 0.4) + (keywordOverlap * 0.35) + (timeTightness * 0.25);
 
-        // Reduce confidence if data is sparse
-        if (beforeTicks.size() < 3 || afterTicks.size() < 3) {
-            confidence *= 0.5;
+        // Gentle sparse data penalty
+        int totalTicks = beforeTicks.size() + afterTicks.size();
+        if (totalTicks < 4) {
+            confidence *= 0.8;
         }
 
-        if (confidence < corrConfig.getMinConfidence()) return;
+        if (confidence < corrConfig.getMinConfidence()) {
+            log.debug("Correlation below threshold: '{}' -> '{}' | delta={}, confidence={} (min={})",
+                    truncate(newsEvent.getHeadline(), 40), truncate(market.getQuestion(), 40),
+                    priceDelta, String.format("%.3f", confidence), corrConfig.getMinConfidence());
+            return;
+        }
 
-        // Compute time window in ms
-        int timeWindowMs = (int) Duration.between(
-                beforeTicks.getLast().getTimestamp(),
-                afterTicks.getFirst().getTimestamp()).toMillis();
+        long timeWindowMs;
+        if (!beforeTicks.isEmpty() && !afterTicks.isEmpty()) {
+            timeWindowMs = Math.abs(Duration.between(
+                    beforeTicks.get(0).getTimestamp(),
+                    afterTicks.get(afterTicks.size() - 1).getTimestamp()).toMillis());
+        } else {
+            timeWindowMs = Duration.between(newsTime, now).toMillis();
+        }
 
         Correlation correlation = Correlation.builder()
                 .marketId(market.getId())
@@ -170,16 +221,19 @@ public class CorrelationEngine {
                 .priceBefore(priceBefore)
                 .priceAfter(priceAfter)
                 .priceDelta(priceDelta)
-                .timeWindowMs(Math.abs(timeWindowMs))
+                .timeWindowMs((int) Math.min(timeWindowMs, Integer.MAX_VALUE))
                 .confidence(BigDecimal.valueOf(confidence).setScale(3, RoundingMode.HALF_UP))
                 .detectedAt(Instant.now())
                 .build();
 
         correlation = correlationRepository.save(correlation);
 
-        log.info("Correlation detected: '{}' -> '{}' | delta: {}, confidence: {}",
-                newsEvent.getHeadline(), market.getQuestion(),
-                priceDelta, String.format("%.3f", confidence));
+        log.info("Correlation detected: '{}' -> '{}' | delta: {}, confidence: {}, window: {}min",
+                truncate(newsEvent.getHeadline(), 50),
+                truncate(market.getQuestion(), 50),
+                priceDelta.setScale(4, RoundingMode.HALF_UP),
+                String.format("%.3f", confidence),
+                timeWindowMs / 60000);
 
         eventPublisher.publishEvent(new CorrelationDetectedEvent(
                 this, correlation.getId(), market.getId(), market.getQuestion(),
@@ -187,10 +241,8 @@ public class CorrelationEngine {
                 priceBefore, priceAfter, priceDelta, confidence, correlation.getDetectedAt()));
     }
 
-    private BigDecimal averagePrice(List<PriceTick> ticks) {
-        return ticks.stream()
-                .map(PriceTick::getPrice)
-                .reduce(BigDecimal.ZERO, BigDecimal::add)
-                .divide(BigDecimal.valueOf(ticks.size()), 6, RoundingMode.HALF_UP);
+    private static String truncate(String s, int maxLen) {
+        if (s == null) return "";
+        return s.length() > maxLen ? s.substring(0, maxLen) + "..." : s;
     }
 }
